# project-final-mlops-densenet

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cloudformation-policy.json  docker-compose.yml  docker-entrypoint.sh  event.json  inline-policy.json  pyproject.toml  requirements.txt  sam-deployment-policy.json  samconfig.toml  setup-model-repo.ps1  setup-model-repo.sh  setup-models-bucket.sh  setup-test-bucket.ps1  setup-test-bucket.sh  template.yaml  trust-policy.json
.aws-sam/pipeline/: pipelineconfig.toml
.github/workflows/: pipeline.yaml
app/: app.py  main.py  model_service.py  prediction_logger.py  schemas.py  start-app.sh
cdk_fargate_deploy/: cdk_fargate_deploy_stack.py
densenet_function/: Dockerfile  app.py  requirements.txt
ec2_app/: Dockerfile
model-image/: Dockerfile
scripts/: download_model.py  download_model_from_s3.py  generate_test_data.py  inspect_model_image.py  inspect_model_s3.py  requirements.txt
tests/: requirements-test.txt  test_model.py
