[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnosis_app"
version = "0.1"
description = "Medical Diagnosis API"
authors = [{name = "Tu Nombre"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx"
]

[tool.setuptools]
packages = ["app"]